# Column-Oriented-ML-System

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/binary_classification/CTR/: CTR.conf  README.md  run.sh
demo/binary_classification/Mushroom/: README.md  mushroom.conf  run.sh
demo/binary_classification/Titanic/: README.md  run.sh  test.txt  titanic.conf  train.txt
demo/regression/computer/: train.txt
gtest/gtestbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
src/base/: class_register.h  common.h  file_util.h  logging.cc  logging.h  math.h  scoped_ptr.h  split_string.h  stl-util.h  stringprintf.h
src/data/: CMakeLists.txt  data_structure.h  hyper_parameters.h  model_parameters.cc  model_parameters.h  model_parameters_in_column.cc  model_parameters_in_column.h  model_parameters_test.cc
src/loss/: CMakeLists.txt  ffm_loss.cc  ffm_loss.h  ffm_loss_test.cc  fm_loss.cc  fm_loss.h  fm_loss_test.cc  linear_loss.cc  linear_loss.h  linear_loss_test.cc  logit_loss.cc  logit_loss.h  logit_loss_test.cc  loss.cc  loss.h  loss_test.cc  svm_loss.cc  svm_loss.h  svm_loss_test.cc
src/reader/: CMakeLists.txt  file_splitor.cc  file_splitor.h  file_splitor_test.cc  parser.cc  parser.h  parser_test.cc  reader.cc  reader.h
src/thread/: CMakeLists.txt  condition_variable.cc  condition_variable.h  condition_variable_test.cc  mutex.h  mutex_test.cc  scoped_locker.h
src/train/: CMakeLists.txt  f2m.conf  f2m_main.cc  flags.cc  flags.h  run.py  train.cc  train.h
src/train/scheduler/: f2m_options.py  util.py
src/update/: CMakeLists.txt  adadelta_updater.cc  adagrad_updater.cc  adagrad_updater.h  adam_updater.cc  adam_updater.h  momentum_updater.cc  momentum_updater.h  regular_term.h  rmsprop_updater.cc  rmsprop_updater.h  updater.cc  updater.h
src/validate/: CMakeLists.txt  validator.cc  validator.h
tools/: base.py  row2column.py
